Make red letters work in Night Mode.
Reworked the way red lettering works. Use two CSS classes instead of
modifying the CSS.

--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1091,6 +1091,10 @@ h2 {
 .q {
     color: #D00;
 }
+/* Override for black letters. */
+.black_letter .q {
+    color: #000;
+}
 
 
 .no_results {
