Style the <html> tag's scrollbars in WebKit.
A small hack is needed to make the scrollbars style to update when switching in and out of Night Mode.

--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1304,6 +1304,25 @@ h2 {
 html {
 	overflow-y: auto;
 }
+/* NOTE: If ::-webkit-scrollbar is not present, the other styles will not work. */
+html ::-webkit-scrollbar {
+    width: 8px;
+    background: #FFF;
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
+}
+
+html ::-webkit-scrollbar-thumb {
+    border-radius: 4px;
+    background: rgba(130,130,130,.3);
+    /* Do not let the thumb get too small. */
+    min-height: 35px;
+}
+
+html ::-webkit-scrollbar-thumb:hover {
+    background: rgba(130,130,130,.5);
+}
+
+
 
 /* NOTE: If ::-webkit-scrollbar is not present, the other styles will not work. */
 div ::-webkit-scrollbar {
