--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -199,8 +199,9 @@ body {
  * Keep the placeholder text grayed out.
  */
 /* NOTE: WebKit does not need this because the placeholder text does not change colors on focus. */
+/*       However, in Night Mode, WebKit's font color is too bright, so it is lightened in night.css.
 /* NOTE: WebKit's placeholder property is "::-webkit-input-placeholder" (note the double colons as well as different text). */
-/*       IE 10 might use ":-ms-input-placeholder". */
+/* NOTE: IE 10 might use ":-ms-input-placeholder". */
 .queryInput:-moz-placeholder {
     color: #A7A7A7;
 }
