--- a/client/styles/base.css
+++ b/client/styles/base.css
@@ -1300,32 +1300,32 @@ h2 {
 }
 
 
-/* Scroll bar colors (WebKit only). */
+/* HTML scrollbar styles (WebKit only). */
 /* NOTE: The scroll bar settings only apply to scroll bars that appear after the styles are applied; */
 /*       therefore, the main scroll bar needs to be hidden as the page and CSS load. */
 html {
 	overflow-y: auto;
 }
+
 /* NOTE: If ::-webkit-scrollbar is not present, the other styles will not work. */
-html ::-webkit-scrollbar {
+html > ::-webkit-scrollbar {
     width: 8px;
     background: #FFF;
     -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
 }
 
-html ::-webkit-scrollbar-thumb {
+html > ::-webkit-scrollbar-thumb {
     border-radius: 4px;
     background: rgba(130,130,130,.3);
     /* Do not let the thumb get too small. */
     min-height: 35px;
 }
 
-html ::-webkit-scrollbar-thumb:hover {
+html > ::-webkit-scrollbar-thumb:hover {
     background: rgba(130,130,130,.5);
 }
 
-
-
+/* <div> scrollbars (WebKit only) */
 /* NOTE: If ::-webkit-scrollbar is not present, the other styles will not work. */
 div ::-webkit-scrollbar {
     width: 8px;
