--- a/client/styles/night.css
+++ b/client/styles/night.css
@@ -223,20 +223,8 @@
 }
 
 
-/* NOTE: If ::-webkit-scrollbar is not present, the other styles will not work. */
-.night ::-webkit-scrollbar {
-    width: 8px;
+/* Set the style for the main scrollbar. */
+/* NOTE: Other scrollbars (like in <div> tags) do not need to be styled because they are transparent and the background color shows through. */
+html.night > ::-webkit-scrollbar {
     background: #000;
-    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3);
-}
-
-.night ::-webkit-scrollbar-thumb {
-    border-radius: 4px;
-    background: rgba(130,130,130,.3);
-    /* Do not let the thumb get too small. */
-    min-height: 35px;
-}
-
-.night ::-webkit-scrollbar-thumb:hover {
-    background: rgba(130,130,130,.5);
 }
