Changed the way the license name is displayed.

--- a/client/styles/night.css
+++ b/client/styles/night.css
@@ -4,7 +4,7 @@
  * @date    11-30-12
  * @version alpha (α)
  * @link    http://BibleForge.com
- * @license MIT
+ * @license The MIT License (MIT)
  */
 
 /*!
